deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cc-site-deployment
  namespace: cc-website
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cc-website
    spec:
      containers:
      - name: cc-website
        image: hub.docker.com/r/dhgreenstein/cloudchaos
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 1
      imagePullSecrets:
      - name: regsecret
